# Shibboleth

./: .clangd  .gitattributes  .gitignore  .hgignore  LICENSE.txt  README.txt  Shibboleth.10x  azure-pipelines.yml  config_map.lua  gen_header.bat  gen_header.sh  gen_src.bat  gen_src.sh  generate_all_solution.lua  header_generator.m4  implementation_generator.m4  meson.build  meson.options  os_conditionals.lua  premake.bat  premake.sh  premake5.bat  premake5.lua  premake5.py  solution_settings.lua
src/Core/Engine/: Shibboleth_App.cpp  Shibboleth_Broadcaster.cpp  Shibboleth_Config.cpp  Shibboleth_EngineAttributesCommon.cpp  Shibboleth_ISubsystem.cpp  Shibboleth_LogManager.cpp  Shibboleth_LooseFileSystem.cpp  Shibboleth_ProxyAllocator.cpp  Shibboleth_Reflection.cpp  Shibboleth_ReflectionManager.cpp  Shibboleth_RuntimeVarManager.cpp  Shibboleth_SerializeablePtr.cpp  Shibboleth_SubsystemCollector.cpp  Shibboleth_Utilities.cpp  meson.build  project_generator.lua
src/Core/Engine/include/: Shibboleth_App.h  Shibboleth_AppConfigs.h  Shibboleth_AppUtils.h  Shibboleth_ArrayPtr.h  Shibboleth_Broadcaster.h  Shibboleth_Broadcaster.inl  Shibboleth_Config.h  Shibboleth_Curve.h  Shibboleth_Defines.h  Shibboleth_DynamicLoader.h  Shibboleth_DynamicLoaderFwd.h  Shibboleth_EngineAttributesCommon.h  Shibboleth_EngineDefines.h  Shibboleth_EnumIterator.h  Shibboleth_EnumReflectionDefinition.inl  Shibboleth_Error.h  Shibboleth_FileWatcher.h  Shibboleth_HashString.h  Shibboleth_HashStringFwd.h  Shibboleth_IApp.h  Shibboleth_IAttribute.h  Shibboleth_IFileSystem.h  Shibboleth_IMainLoop.h  Shibboleth_IManager.h  Shibboleth_IModule.h  Shibboleth_IReflection.h  Shibboleth_ISubsystem.h  Shibboleth_ITransformProvider.h  Shibboleth_Image.h  Shibboleth_InstancedPtr.h  Shibboleth_InstancedPtr.inl  Shibboleth_InstancedPtrReflection.h  Shibboleth_InstancedPtrReflection.inl  Shibboleth_JSONSerializeWriter.h  Shibboleth_JobPool.h  Shibboleth_JobPoolFwd.h  Shibboleth_LogManager.h  Shibboleth_LooseFileSystem.h  Shibboleth_Math.h  Shibboleth_MessagePackSerializeWriter.h  (+26 more)
src/Core/Engine/src/: Shibboleth_App.cpp  Shibboleth_Broadcaster.cpp  Shibboleth_EngineAttributesCommon.cpp  Shibboleth_IManager.cpp  Shibboleth_ISubsystem.cpp  Shibboleth_Image.cpp  Shibboleth_JSONSerializeWriter.cpp  Shibboleth_LooseFileSystem.cpp  Shibboleth_Math.cpp  Shibboleth_MessagePackSerializeWriter.cpp  Shibboleth_NewDelete.cpp  Shibboleth_ProxyAllocator.cpp  Shibboleth_RuntimeVarManager.cpp  Shibboleth_SerializeReaderWrapper.cpp  Shibboleth_SerializeablePtr.cpp  Shibboleth_SubsystemCollector.cpp  Shibboleth_Utilities.cpp
src/Core/GameApp/: Game_Main.cpp  meson.build  project_generator.lua
src/Core/Game_App/: Game_Main.cpp  meson.build  project_generator.lua
src/Core/Memory/: Shibboleth_Allocator.cpp  Shibboleth_Memory.cpp  meson.build  project_generator.lua
src/Core/Memory/include/: Shibboleth_Allocator.h  Shibboleth_IAllocator.h  Shibboleth_Memory.h  Shibboleth_ProxyAllocator.h
src/Core/Memory/src/: Shibboleth_Allocator.cpp  Shibboleth_Memory.cpp  Shibboleth_NewDelete.cpp  Shibboleth_ProxyAllocator.cpp
src/Dependencies/Catch2/: Shibboleth_TestMain.cpp  catch_amalgamated.cpp  meson.build  project_generator.lua
src/Dependencies/EASTL/: meson.build  project_generator.lua
src/Dependencies/EASTL/source/: assert.cpp  hashtable.cpp  numeric_limits.cpp  red_black_tree.cpp  string.cpp  thread_support.cpp
src/Dependencies/JoltPhysics/: meson.build  project_generator.lua
src/Dependencies/acl/: meson.build  project_generator.lua
src/Dependencies/ads/: DockAreaTabBar.cpp  DockAreaWidget.cpp  DockWidgetTab.cpp  meson.build  project_generator.lua
src/Dependencies/angelscript/: meson.build  project_generator.lua  project_generator_disabled.lua
src/Dependencies/argparse/: argparse.hpp  meson.build
src/Dependencies/assimp/: LICENSE.txt  meson.build  project_generator.lua
src/Dependencies/assimp/code/: AssbinExporter.cpp  AssbinLoader.cpp  Q3BSPZipArchive.h  glTF2Asset.inl  glTF2AssetWriter.inl  revision.h
src/Dependencies/capstone/: meson.build  project_generator.lua
src/Dependencies/fmt/: meson.build  project_generator.lua
src/Dependencies/glfw/: meson.build  project_generator.lua
src/Dependencies/glfw/src/: posix_time.c
src/Dependencies/glm/: meson.build  project_generator.lua
src/Dependencies/imgui/: imconfig.h  imgui.cpp  meson.build  project_generator.lua
src/Dependencies/libpng/: meson.build  png.c  png.h  pngconf.h  pngtest.c  project_generator.lua
src/Dependencies/libtiff/: meson.build  project_generator.lua  tif_config.h  tif_config.h.win  tif_dirread.c  tiffconf.h
src/Dependencies/mimalloc/: meson.build  project_generator.lua
src/Dependencies/minizip-ng/: meson.build  mz_os_posix.c  project_generator.lua  unzip.h  zip.h
src/Dependencies/mpack/: LICENSE.txt  meson.build  mpack-common.c  mpack-common.h  mpack-config.h  mpack-config.h.sample  mpack-defaults.h  mpack-expect.c  mpack-expect.h  mpack-node.c  mpack-node.h  mpack-platform.c  mpack-platform.h  mpack-reader.c  mpack-reader.h  mpack-writer.c  mpack-writer.h  mpack.h  project_generator.lua
src/Dependencies/rapidjson/: meson.build  project_generator.lua
src/Dependencies/tracy/: Tracy.hpp  TracyLua.hpp  meson.build  project_generator.lua
src/Dependencies/volk/: meson.build
src/Dependencies/zlib-ng/: LICENSE.txt  adler32.c  adler32_p.h  compress.c  crc32.c  crc32.h  deflate.c  deflate.h  deflate_fast.c  deflate_medium.c  deflate_p.h  deflate_slow.c  functable.c  functable.h  gzclose.c  gzendian.h  gzguts.h  gzlib.c  gzread.c  gzwrite.c  infback.c  inffast.c  inffast.h  inflate.c  inflate.h  inflate_p.h  inftrees.c  inftrees.h  match_p.h  memcopy.h  meson.build  project_generator.lua  trees.c  trees.h  uncompr.c  zbuild.h  zconf-ng.h  zconf.h  zendian.h  zlib-ng.h  (+3 more)
src/Dependencies/zstd/: meson.build  project_generator.lua
src/Frameworks/Esprit/: Esprit_Global.cpp  Esprit_Pose.cpp  Esprit_Skeleton.cpp  Esprit_StateMachine.cpp  Esprit_StateMachineCommonConditions.cpp  Esprit_VariableSet.cpp  meson.build  project_generator.lua
(+4737 files in other folders)
