#####################################################################################
# Copyright (C) by Nicholas LaCroix
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.
#####################################################################################

option('wayland', type: 'boolean', value: false, description: 'On Linux, use Wayland instead of X11 window system.')
option('profile', type: 'boolean', value: false, description: 'Enable profiling support.')
option('address-sanitizer', type: 'boolean', value: false, description: 'Enable address sanitization.')
option('config-override-directory', type: 'string', value: '', description: 'Specifies a subdirectory under \'cfg\' to apply overrides to base configs.')
option('static', type: 'boolean', value: false, description: 'Makes a static build with no module or engine DLLs.')

option(
  'renderer',
  type: 'combo',
  choices: ['d3d11', 'd3d12', 'vulkan', 'metal'],
  value: 'd3d11',
  description: 'Graphics Module: Which rendering backend to use.'
)

